--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ about:
   home: https://github.com/Azure/azure-storage-python
   license: Apache-2.0
   license_family: Apache
-  license_file: {{ RECIPE_DIR }}/LICENSE.txt
+  license_file: LICENSE.txt
   summary: 'Microsoft Azure Storage Common Client Library for Python'
 
 extra:
